[package]
name = "ddnet_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
hashlink = "0.8.3"
image = "0.24.6"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["blocking"] }
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "2bb56baf63d8f65246f075f1922d2d0571ae0cb5" }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "time"] }
